Fix legibility of CR flash messages

--- a/registrations/assets/css/clandestine-rendezvous.scss
+++ b/registrations/assets/css/clandestine-rendezvous.scss
@@ -228,3 +228,7 @@ thead, tbody {
 .button {
   margin-bottom: 0;
 }
+
+.alert-info.success, .alert-danger.alert {
+  color: black;
+}
